<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RunForCharity</string>
    <string name="action_settings">Settings</string>
	<string name="login">登录</string>
	<string name="register">注册</string>
	<string name="email">Email</string>
	<string name="password">密码</string>
	<string name="forgetPassword">忘记密码?</string>
	<string name="loginBySNS">社交网络账号登录</string>
	<string name="loginByRFC">RFC账号登录</string>
	<string name="loginByWeibo">新浪微博账号登录</string>
	<string name="loginByQQ">QQ账号登录</string>
	<string name="avatar">avatar</string>
	<string name="userName">NaNa</string>
	<string name="today">今天</string>
</resources>
