<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgroundColor"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textSize="30sp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/loginBySNS"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/loginBySNS" 
        android:textColor="@drawable/loginSubTitleColor"
        android:textSize="20sp"
        android:background="@drawable/loginSubTitleBack"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/loginByWeiboButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/loginByWeibo" 
            android:textSize="20sp"
	   	    android:background="@drawable/login_by_weibo_btn"
	   	    android:textColor="@drawable/loginButtonTextWhite"
	   	    android:layout_marginTop="20dp"/>
       	<Button
            android:id="@+id/loginByQQButton"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:text="@string/loginByQQ" 
            android:textSize="20sp"
	   	    android:background="@drawable/login_by_qq_btn"
	   	    android:textColor="@drawable/loginButtonTextWhite"
	   	    android:layout_marginTop="15dp"
	   	    android:layout_marginBottom="20dp"/>
        
    </LinearLayout>
    
   	<TextView
        android:id="@+id/loginByRFC"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/loginByRFC" 
        android:textColor="@drawable/loginSubTitleColor"
        android:textSize="20sp"
        android:background="@drawable/loginSubTitleBack"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"/>

   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="vertical"
   	    android:gravity="center">
	   	<EditText
	   	    android:id="@+id/loginEmailEditText"
	   	    android:layout_width="300dp"
	   	    android:layout_height="wrap_content"
	   	    android:ems="10"
	   	    android:hint="@string/email"
	   	    android:inputType="textEmailAddress" 
	   	    android:layout_marginTop="20dp">
	
	   	    <requestFocus />
	   	</EditText>
	
	   	<EditText
	   	    android:id="@+id/loginPasswordEditText"
	   	    android:layout_width="300dp"
	   	    android:layout_height="wrap_content"
	   	    android:ems="10"
	   	    android:hint="@string/password"
	   	    android:inputType="textPassword" 
	   	    android:layout_marginTop="10dp"/>
	</LinearLayout>
   	<LinearLayout
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:orientation="horizontal"
   	    android:gravity="center">
   	    <Button
	   	    android:id="@+id/loginRegister"
	   	    android:layout_width="90dp"
	   	    android:layout_height="50dp"
	   	    android:text="@string/register"
	   	    android:textSize="20sp"
	   	    android:background="@drawable/rounded_corner_red"
	   	    android:textColor="@drawable/loginButtonTextWhite"
	   	    android:layout_marginRight="60dp"
	   	    android:layout_marginTop="15dp"
	   	    android:layout_marginBottom="15dp"/>

	   	<Button
	   	    android:id="@+id/loginButton"
	   	    android:layout_width="90dp"
	   	    android:layout_height="50dp"
	   	    android:text="@string/login"
	   	    android:textSize="20sp"
	   	    android:background="@drawable/rounded_corner_red"
	   	    android:textColor="@drawable/loginButtonTextWhite"
	   	    android:layout_marginLeft="60dp"
	   	    android:layout_marginTop="15dp"
	   	    android:layout_marginBottom="15dp"/>
   	</LinearLayout>

   	<TextView
   	    android:id="@+id/loginForgetPasswordText"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:text="@string/forgetPassword"
   	    android:textColor="@drawable/loginForgetPasswordText"
   	    android:textSize="15sp"
   	    android:layout_gravity="right"
   	    android:layout_marginRight="45dp"/>
    
</LinearLayout>